--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <html lang= "en">
 
 <head>
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-		<script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-		<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
-		<title>Trains</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+	<script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
+	<title>Trains</title>
 </head>
+
+<body>
+        
+    <script src="assets/javascript/app.js"></script>
+</body>
+</html>
