--- a/assets/backup/index (2).html
+++ b/assets/backup/index (2).html
@@ -6,11 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>US Transversal</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/slate/bootstrap.min.css" rel="stylesheet" integrity="sha384-RpX8okQqCyUNG7PlOYNybyJXYTtGQH+7rIKiVvg1DLg6jahLEk47VvpUyS+E2/uJ"
-    crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/slate/bootstrap.min.css" rel="stylesheet" integrity="sha384-RpX8okQqCyUNG7PlOYNybyJXYTtGQH+7rIKiVvg1DLg6jahLEk47VvpUyS+E2/uJ" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-<!--Jumbotron containing heading, current time, etc.-->
+<!--Jumbotron containg heading, current time, etc.-->
 <body>
   <div class="container">
     <div class="jumbotron">
@@ -18,7 +17,7 @@
       <h2 class="text-center" id="subHeading">Be on Track of Trains</h2>
       <p class="pull-right" id="currentTime"></p>
     </div>
-    <!--Train scheduling/card and table formating-->
+
     <div class="row">
       <div class="col-xs-12 col-sm-9">
         <div class="panel panel-default">
@@ -43,7 +42,7 @@
           </div>
         </div>
       </div>
-      <!--"Add Train" form formating informating-->
+
       <div class="col-xs-12 col-sm-3">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -55,17 +54,14 @@
                     <label>Train Name</label>
                     <input type="text" class="form-control form-field" id="train-name">
                   </div>
-                  
                   <div class="form-group">
                     <label>Destination</label>
                     <input type="text" class="form-control form-field" id="destination">
                   </div>
-
                   <div class="form-group">
                     <label>First Train Time: HH:mm - military time</label>
                     <input type="text" class="form-control form-field" id="first-train">
                   </div>
-
                   <div class="form-group">
                     <label>Frequency (min)</label>
                     <input type="text" class="form-control form-field" id="frequency">
@@ -80,13 +76,11 @@
       </div>
     </div>
   </div>
-  <!--Javascript & Firebase links-->
-  <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js" integrity="sha256-1hjUhpc44NwiNg8OwMu2QzJXhD8kcj+sJA3aCQZoUjg="
-    crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous">
-    </script>
+
+  <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js" integrity="sha256-1hjUhpc44NwiNg8OwMu2QzJXhD8kcj+sJA3aCQZoUjg=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
+  </script>
   <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 
